--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Album_view"></activity>
+        <activity android:name=".ActivityArtist"></activity>
+        <activity android:name=".Album_view" />
         <activity android:name=".PlaylistView" />
         <activity
             android:name=".MainActivity"
