--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,21 @@
 
     <dist:module dist:instant="true" />
 
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+
+    <permission
+        android:name="com.example.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +27,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".ActivityArtist"></activity>
+
+        <activity android:name=".ConcertActivity"></activity>
+        <activity android:name=".ActivityArtist" />
         <activity android:name=".Album_view" />
         <activity android:name=".PlaylistView" />
         <activity
@@ -36,6 +53,8 @@
         <activity
             android:name=".SignInActivity"
             android:screenOrientation="portrait" />
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDAykEAt9NiRQjNnk-kFPQfI4jZYQxg0vM"/>
     </application>
 
 </manifest>
