Google map et frag Artist II

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,20 @@
 
     <dist:module dist:instant="true" />
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <permission
         android:name="com.example.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -27,8 +27,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        <activity android:name=".ConcertActivity"></activity>
+        <activity android:name=".Model.ArtistModel"></activity>
+        <activity android:name=".Model.ConcertModel" />
+        <activity android:name=".Model.SingleModel" />
+        <activity android:name=".Model.AlbumModel" />
+        <activity android:name=".ConcertActivity" />
         <activity android:name=".ActivityArtist" />
         <activity android:name=".Album_view" />
         <activity android:name=".PlaylistView" />
@@ -53,8 +56,10 @@
         <activity
             android:name=".SignInActivity"
             android:screenOrientation="portrait" />
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDAykEAt9NiRQjNnk-kFPQfI4jZYQxg0vM"/>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDAykEAt9NiRQjNnk-kFPQfI4jZYQxg0vM" />
     </application>
 
 </manifest>
