--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //ROOM
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha3'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
+    implementation 'com.google.code.gson:gson:2.6.2'
     //VIEW MODEL & LIVE DATA
     implementation "android.arch.lifecycle:extensions:1.1.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
