--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    android:installLocation="internalOnly"
-    package="com.example.if26new">
+    package="com.example.if26new"
+    android:installLocation="internalOnly">
 
     <dist:module dist:instant="true" />
 
@@ -10,10 +10,14 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+    <uses-feature android:name="android.hardware.fingerprint"
+        android:required="true"/>
 
     <permission
         android:name="com.example.permission.MAPS_RECEIVE"
@@ -28,7 +32,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Model.ArtistModel"></activity>
+        <activity android:name=".Model.ArtistModel" />
         <activity android:name=".Model.ConcertModel" />
         <activity android:name=".Model.SingleModel" />
         <activity android:name=".Model.AlbumModel" />
